<resources>
    <string name="app_name">weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wind_direction">wind direction:</string>
    <string name="wind_speed">wind speed:</string>
    <string name="minimum_temp">minimum temp:</string>
    <string name="maximum_temp">maximum temp:</string>
    <string name="temp">temp:</string>
    <string name="city_name">city name:</string>
    <string name="textview">TextView</string>
    <string name="view">view</string>
</resources>
